llvm code generation/ExprParser.cpp

// Generated from /home/navid/Compiler_project/Expr.g4 by ANTLR 4.8


#include "ExprListener.h"
#include "ExprVisitor.h"

#include "ExprParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExprParser::ExprParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExprParser::~ExprParser() {
  delete _interpreter;
}

std::string ExprParser::getGrammarFileName() const {
  return "Expr.g4";
}

const std::vector<std::string>& ExprParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExprParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

ExprParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::Start_funcContext* ExprParser::ProgramContext::start_func() {
  return getRuleContext<ExprParser::Start_funcContext>(0);
}

std::vector<ExprParser::Ft_defContext *> ExprParser::ProgramContext::ft_def() {
  return getRuleContexts<ExprParser::Ft_defContext>();
}

ExprParser::Ft_defContext* ExprParser::ProgramContext::ft_def(size_t i) {
  return getRuleContext<ExprParser::Ft_defContext>(i);
}


size_t ExprParser::ProgramContext::getRuleIndex() const {
  return ExprParser::RuleProgram;
}

void ExprParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void ExprParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any ExprParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ProgramContext* ExprParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ExprParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(55);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(52);
        ft_def();
      }
      setState(57);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(58);
    start_func();
    setState(62);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::T__0

    || _la == ExprParser::Function) {
      setState(59);
      ft_def();
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Start_funcContext ------------------------------------------------------------------

ExprParser::Start_funcContext::Start_funcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::Start_funcContext::Int() {
  return getToken(ExprParser::Int, 0);
}

tree::TerminalNode* ExprParser::Start_funcContext::ID() {
  return getToken(ExprParser::ID, 0);
}

tree::TerminalNode* ExprParser::Start_funcContext::Function() {
  return getToken(ExprParser::Function, 0);
}

ExprParser::StartContext* ExprParser::Start_funcContext::start() {
  return getRuleContext<ExprParser::StartContext>(0);
}

ExprParser::BlockContext* ExprParser::Start_funcContext::block() {
  return getRuleContext<ExprParser::BlockContext>(0);
}


size_t ExprParser::Start_funcContext::getRuleIndex() const {
  return ExprParser::RuleStart_func;
}

void ExprParser::Start_funcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart_func(this);
}

void ExprParser::Start_funcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart_func(this);
}


antlrcpp::Any ExprParser::Start_funcContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStart_func(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Start_funcContext* ExprParser::start_func() {
  Start_funcContext *_localctx = _tracker.createInstance<Start_funcContext>(_ctx, getState());
  enterRule(_localctx, 2, ExprParser::RuleStart_func);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(ExprParser::T__0);
    setState(66);
    match(ExprParser::Int);
    setState(67);
    match(ExprParser::ID);
    setState(68);
    match(ExprParser::T__1);
    setState(69);
    match(ExprParser::T__2);
    setState(70);
    match(ExprParser::Function);
    setState(71);
    start();
    setState(72);
    match(ExprParser::T__0);
    setState(73);
    match(ExprParser::T__1);
    setState(74);
    block();

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Ft_defContext ------------------------------------------------------------------

ExprParser::Ft_defContext::Ft_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::Fun_defContext* ExprParser::Ft_defContext::fun_def() {
  return getRuleContext<ExprParser::Fun_defContext>(0);
}


size_t ExprParser::Ft_defContext::getRuleIndex() const {
  return ExprParser::RuleFt_def;
}

void ExprParser::Ft_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFt_def(this);
}

void ExprParser::Ft_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFt_def(this);
}


antlrcpp::Any ExprParser::Ft_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFt_def(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Ft_defContext* ExprParser::ft_def() {
  Ft_defContext *_localctx = _tracker.createInstance<Ft_defContext>(_ctx, getState());
  enterRule(_localctx, 4, ExprParser::RuleFt_def);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    fun_def();

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_defContext ------------------------------------------------------------------

ExprParser::Var_defContext::Var_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::TypeContext* ExprParser::Var_defContext::type() {
  return getRuleContext<ExprParser::TypeContext>(0);
}

std::vector<ExprParser::Var_valContext *> ExprParser::Var_defContext::var_val() {
  return getRuleContexts<ExprParser::Var_valContext>();
}

ExprParser::Var_valContext* ExprParser::Var_defContext::var_val(size_t i) {
  return getRuleContext<ExprParser::Var_valContext>(i);
}

tree::TerminalNode* ExprParser::Var_defContext::Const() {
  return getToken(ExprParser::Const, 0);
}


size_t ExprParser::Var_defContext::getRuleIndex() const {
  return ExprParser::RuleVar_def;
}

void ExprParser::Var_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_def(this);
}

void ExprParser::Var_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_def(this);
}


antlrcpp::Any ExprParser::Var_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVar_def(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Var_defContext* ExprParser::var_def() {
  Var_defContext *_localctx = _tracker.createInstance<Var_defContext>(_ctx, getState());
  enterRule(_localctx, 6, ExprParser::RuleVar_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::Const) {
      setState(78);
      match(ExprParser::Const);
    }
    setState(81);
    type();
    setState(82);
    var_val();
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::T__3) {
      setState(83);
      match(ExprParser::T__3);
      setState(84);
      var_val();
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(90);
    match(ExprParser::T__4);

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

ExprParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::TypeContext::Int() {
  return getToken(ExprParser::Int, 0);
}

tree::TerminalNode* ExprParser::TypeContext::Bool() {
  return getToken(ExprParser::Bool, 0);
}

tree::TerminalNode* ExprParser::TypeContext::Float() {
  return getToken(ExprParser::Float, 0);
}

tree::TerminalNode* ExprParser::TypeContext::String() {
  return getToken(ExprParser::String, 0);
}

tree::TerminalNode* ExprParser::TypeContext::ID() {
  return getToken(ExprParser::ID, 0);
}


size_t ExprParser::TypeContext::getRuleIndex() const {
  return ExprParser::RuleType;
}

void ExprParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void ExprParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


antlrcpp::Any ExprParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::TypeContext* ExprParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 8, ExprParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::Bool)
      | (1ULL << ExprParser::Float)
      | (1ULL << ExprParser::Int)
      | (1ULL << ExprParser::String)
      | (1ULL << ExprParser::ID))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_valContext ------------------------------------------------------------------

ExprParser::Var_valContext::Var_valContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::RefContext* ExprParser::Var_valContext::ref() {
  return getRuleContext<ExprParser::RefContext>(0);
}

ExprParser::Const_valContext* ExprParser::Var_valContext::const_val() {
  return getRuleContext<ExprParser::Const_valContext>(0);
}

ExprParser::ExprContext* ExprParser::Var_valContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}


size_t ExprParser::Var_valContext::getRuleIndex() const {
  return ExprParser::RuleVar_val;
}

void ExprParser::Var_valContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_val(this);
}

void ExprParser::Var_valContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_val(this);
}


antlrcpp::Any ExprParser::Var_valContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVar_val(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Var_valContext* ExprParser::var_val() {
  Var_valContext *_localctx = _tracker.createInstance<Var_valContext>(_ctx, getState());
  enterRule(_localctx, 10, ExprParser::RuleVar_val);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    ref();
    setState(100);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::T__2) {
      setState(95);
      match(ExprParser::T__2);
      setState(98);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
      case 1: {
        setState(96);
        const_val();
        break;
      }

      case 2: {
        setState(97);
        expr();
        break;
      }

      }
    }

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fun_defContext ------------------------------------------------------------------

ExprParser::Fun_defContext::Fun_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::Fun_defContext::Function() {
  return getToken(ExprParser::Function, 0);
}

tree::TerminalNode* ExprParser::Fun_defContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::BlockContext* ExprParser::Fun_defContext::block() {
  return getRuleContext<ExprParser::BlockContext>(0);
}

std::vector<ExprParser::Args_varContext *> ExprParser::Fun_defContext::args_var() {
  return getRuleContexts<ExprParser::Args_varContext>();
}

ExprParser::Args_varContext* ExprParser::Fun_defContext::args_var(size_t i) {
  return getRuleContext<ExprParser::Args_varContext>(i);
}


size_t ExprParser::Fun_defContext::getRuleIndex() const {
  return ExprParser::RuleFun_def;
}

void ExprParser::Fun_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFun_def(this);
}

void ExprParser::Fun_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFun_def(this);
}


antlrcpp::Any ExprParser::Fun_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFun_def(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Fun_defContext* ExprParser::fun_def() {
  Fun_defContext *_localctx = _tracker.createInstance<Fun_defContext>(_ctx, getState());
  enterRule(_localctx, 12, ExprParser::RuleFun_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::T__0) {
      setState(102);
      match(ExprParser::T__0);
      setState(103);
      args_var(0);
      setState(104);
      match(ExprParser::T__1);
      setState(105);
      match(ExprParser::T__2);
    }
    setState(109);
    match(ExprParser::Function);
    setState(110);
    match(ExprParser::ID);
    setState(111);
    match(ExprParser::T__0);
    setState(113);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::Bool)
      | (1ULL << ExprParser::Float)
      | (1ULL << ExprParser::Int)
      | (1ULL << ExprParser::String)
      | (1ULL << ExprParser::ID))) != 0)) {
      setState(112);
      args_var(0);
    }
    setState(115);
    match(ExprParser::T__1);
    setState(116);
    block();

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Args_varContext ------------------------------------------------------------------

ExprParser::Args_varContext::Args_varContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::TypeContext* ExprParser::Args_varContext::type() {
  return getRuleContext<ExprParser::TypeContext>(0);
}

tree::TerminalNode* ExprParser::Args_varContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::Args_varContext* ExprParser::Args_varContext::args_var() {
  return getRuleContext<ExprParser::Args_varContext>(0);
}


size_t ExprParser::Args_varContext::getRuleIndex() const {
  return ExprParser::RuleArgs_var;
}

void ExprParser::Args_varContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgs_var(this);
}

void ExprParser::Args_varContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgs_var(this);
}


antlrcpp::Any ExprParser::Args_varContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitArgs_var(this);
  else
    return visitor->visitChildren(this);
}


ExprParser::Args_varContext* ExprParser::args_var() {
   return args_var(0);
}

ExprParser::Args_varContext* ExprParser::args_var(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  ExprParser::Args_varContext *_localctx = _tracker.createInstance<Args_varContext>(_ctx, parentState);
  ExprParser::Args_varContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, ExprParser::RuleArgs_var, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(119);
    type();
    setState(124);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::T__5) {
      setState(120);
      match(ExprParser::T__5);
      setState(121);
      match(ExprParser::T__6);
      setState(126);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(127);
    match(ExprParser::ID);
    _ctx->stop = _input->LT(-1);
    setState(143);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<Args_varContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleArgs_var);
        setState(129);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(130);
        match(ExprParser::T__3);
        setState(131);
        type();
        setState(136);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ExprParser::T__5) {
          setState(132);
          match(ExprParser::T__5);
          setState(133);
          match(ExprParser::T__6);
          setState(138);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(139);
        match(ExprParser::ID);
      }
      setState(145);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ExprParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::Var_defContext *> ExprParser::BlockContext::var_def() {
  return getRuleContexts<ExprParser::Var_defContext>();
}

ExprParser::Var_defContext* ExprParser::BlockContext::var_def(size_t i) {
  return getRuleContext<ExprParser::Var_defContext>(i);
}

std::vector<ExprParser::StmtContext *> ExprParser::BlockContext::stmt() {
  return getRuleContexts<ExprParser::StmtContext>();
}

ExprParser::StmtContext* ExprParser::BlockContext::stmt(size_t i) {
  return getRuleContext<ExprParser::StmtContext>(i);
}


size_t ExprParser::BlockContext::getRuleIndex() const {
  return ExprParser::RuleBlock;
}

void ExprParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void ExprParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


antlrcpp::Any ExprParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::BlockContext* ExprParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 16, ExprParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(146);
    match(ExprParser::T__7);
    setState(151);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::T__0)
      | (1ULL << ExprParser::Bool)
      | (1ULL << ExprParser::Break)
      | (1ULL << ExprParser::Const)
      | (1ULL << ExprParser::Continue)
      | (1ULL << ExprParser::Float)
      | (1ULL << ExprParser::For)
      | (1ULL << ExprParser::If)
      | (1ULL << ExprParser::Int)
      | (1ULL << ExprParser::Read)
      | (1ULL << ExprParser::String)
      | (1ULL << ExprParser::Switch)
      | (1ULL << ExprParser::While)
      | (1ULL << ExprParser::Write)
      | (1ULL << ExprParser::ID))) != 0)) {
      setState(149);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
      case 1: {
        setState(147);
        var_def();
        break;
      }

      case 2: {
        setState(148);
        stmt();
        break;
      }

      }
      setState(153);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(154);
    match(ExprParser::T__8);

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

ExprParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::AssignContext* ExprParser::StmtContext::assign() {
  return getRuleContext<ExprParser::AssignContext>(0);
}

ExprParser::Func_callContext* ExprParser::StmtContext::func_call() {
  return getRuleContext<ExprParser::Func_callContext>(0);
}

ExprParser::Cond_stmtContext* ExprParser::StmtContext::cond_stmt() {
  return getRuleContext<ExprParser::Cond_stmtContext>(0);
}

ExprParser::Loop_stmtContext* ExprParser::StmtContext::loop_stmt() {
  return getRuleContext<ExprParser::Loop_stmtContext>(0);
}

tree::TerminalNode* ExprParser::StmtContext::Break() {
  return getToken(ExprParser::Break, 0);
}

tree::TerminalNode* ExprParser::StmtContext::Continue() {
  return getToken(ExprParser::Continue, 0);
}


size_t ExprParser::StmtContext::getRuleIndex() const {
  return ExprParser::RuleStmt;
}

void ExprParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void ExprParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}


antlrcpp::Any ExprParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::StmtContext* ExprParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 18, ExprParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(168);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(156);
      assign();
      setState(157);
      match(ExprParser::T__4);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(159);
      func_call();
      setState(160);
      match(ExprParser::T__4);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(162);
      cond_stmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(163);
      loop_stmt();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(164);
      match(ExprParser::Break);
      setState(165);
      match(ExprParser::T__4);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(166);
      match(ExprParser::Continue);
      setState(167);
      match(ExprParser::T__4);
      break;
    }

    }

  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

ExprParser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::VarContext *> ExprParser::AssignContext::var() {
  return getRuleContexts<ExprParser::VarContext>();
}

ExprParser::VarContext* ExprParser::AssignContext::var(size_t i) {
  return getRuleContext<ExprParser::VarContext>(i);
}

ExprParser::Const_valContext* ExprParser::AssignContext::const_val() {
  return getRuleContext<ExprParser::Const_valContext>(0);
}

ExprParser::ExprContext* ExprParser::AssignContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}


size_t ExprParser::AssignContext::getRuleIndex() const {
  return ExprParser::RuleAssign;
}

void ExprParser::AssignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign(this);
}
